<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context="activity.Pagamento">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tela_pagamento"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"

        />
    <EditText
        android:id="@+id/txt_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bairro"
        android:padding="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:inputType="text"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/txt_rua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rua_e_numero"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:maxLines="1"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cidade"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:maxLines="1"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/celular"
        android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:maxLength="11"
        android:inputType="number"
        />
    <Button
        android:id="@+id/bt_pagamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_pagamento"
        android:textColor="@color/px_white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:padding="15dp"
        android:textAllCaps="false"
        android:layout_margin="20dp"
        />

</LinearLayout>