<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activity.DetahesProdutos">
    <ImageView
        android:id="@+id/dt_fotoProduto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@color/black"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/dt_nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_tamanho"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <RadioButton
            android:id="@+id/txt_38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_38"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/px_transparent"
            android:layout_marginEnd="10dp"

            />
        <RadioButton
            android:id="@+id/txt_39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_39"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/px_transparent"
            android:layout_marginEnd="10dp"

            />
        <RadioButton
            android:id="@+id/txt_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_40"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/px_transparent"
            android:layout_marginEnd="10dp"

            />
        <RadioButton
            android:id="@+id/txt_41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_41"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/px_transparent"
            android:layout_marginEnd="10dp"

            />
        <RadioButton
            android:id="@+id/txt_42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_42"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@drawable/radio_text_color"
            android:background="@drawable/radio_selector"
            android:button="@color/px_transparent"
            android:layout_marginEnd="10dp"

            />

    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preco"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />
    <TextView
        android:id="@+id/dt_precoProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
    <Button
        android:id="@+id/bt_FinalizarProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_finalizar"
        android:textColor="@color/px_white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_margin="20dp"


        />



</LinearLayout>