<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >


<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.FormCadastro">

    <TextView
        android:id="@+id/txt_titulo_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tela_cadastro"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/container_formularios"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/conatiner_formulario"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_cadastro" />
    <EditText
        android:id="@+id/txtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_tex"
        android:padding="15dp"
        android:hint="@string/nome"
        android:inputType="text"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtNome"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_tex"
        android:padding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_tex"
        android:padding="15dp"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        />
    <Button
        android:id="@+id/bt_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSenha"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/cadastrar"
        android:textColor="@color/px_white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="10dp"
        android:backgroundTint="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>