<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activity.FormLogin">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/txtNomeLoja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_loja"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <View
        android:id="@+id/container_formularios"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/conatiner_formulario"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeLoja" />
    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/container_formularios"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_tex"
        android:padding="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_edit_tex"
        android:padding="15dp"
        android:hint="@string/senha"
        android:inputType="numberPassword"
        />
    <Button
        android:id="@+id/bt_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSenha"
        app:layout_constraintStart_toStartOf="@id/container_formularios"
        app:layout_constraintEnd_toEndOf="@id/container_formularios"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/txt_button_login"
        android:textColor="@color/px_white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:padding="10dp"
        android:backgroundTint="@color/black"
        />

    <TextView
        android:id="@+id/txt_tela_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_tela_cadastro"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_formularios" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>